<resources>
    <string name="app_name">ShippingCalc</string>
    <string name="action_settings">Settings</string>

    <string name="packageWeight">Weight of the package</string>
    <string name="baseCost">Base Cost:</string>
    <string name="ounces">Oz</string>
    <string name="addedCost">Added Cost:</string>
    <string name="totalCost">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>
    <string name="inOunces">In Ounces</string>

</resources>
