<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.schoolwork.shippingcalc.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main"
        android:id="@+id/include" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/shippingbck">

        <TextView
            android:id="@+id/packageWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:clickable="false"
            android:text="@string/packageWeight"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/inputWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:ems="10"
            android:hint="@string/zero"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:layout_below="@+id/packageWeight"
            android:layout_centerHorizontal="true">
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/baseCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baseCost"
            android:layout_alignBaseline="@+id/baseCostValue"
            android:layout_alignBottom="@+id/baseCostValue"
            android:layout_alignLeft="@+id/addedCost"
            android:layout_alignStart="@+id/addedCost" />

        <TextView
            android:id="@+id/addedCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addedCost"
            android:layout_alignBaseline="@+id/addedCostValue"
            android:layout_alignBottom="@+id/addedCostValue"
            android:layout_alignLeft="@+id/totalCost"
            android:layout_alignStart="@+id/totalCost" />

        <TextView
            android:id="@+id/totalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalCost"
            android:layout_alignBaseline="@+id/totalCostValue"
            android:layout_alignBottom="@+id/totalCostValue"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="61dp"
            android:layout_marginStart="61dp" />

        <TextView
            android:id="@+id/baseCostValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zeroDec"
            android:layout_above="@+id/addedCostValue"
            android:layout_alignLeft="@+id/addedCostValue"
            android:layout_alignStart="@+id/addedCostValue"
            android:layout_marginBottom="27dp" />

        <TextView
            android:id="@+id/addedCostValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zeroDec"
            android:layout_marginBottom="28dp"
            android:layout_above="@+id/totalCost"
            android:layout_alignLeft="@+id/totalCostValue"
            android:layout_alignStart="@+id/totalCostValue" />

        <TextView
            android:id="@+id/totalCostValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/zeroDec"
            android:layout_marginTop="127dp"
            android:layout_below="@+id/inputWeight"
            android:layout_alignRight="@+id/inputWeight"
            android:layout_alignEnd="@+id/inputWeight" />

        <TextView
            android:id="@+id/inOunces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputWeight"
            android:layout_centerHorizontal="true"
            android:text="@string/inOunces" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
